fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -331,8 +331,8 @@ video {
   flex-direction: column;
   padding-bottom: 1rem;
   padding-top: 1rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
 
 .single-proj h1 {
